--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "VR experience",
   "main": "index.js",
-  "homepage": "https://github.com/atomjar/EarthAngelsVR",
+  "homepage": "https://atomjar.github.io/EarthAngelsVR",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "gh-pages -d build"
